# TreeMachineLearningLibrary

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp
code/MLSuite/: BenchmarkStrategy.cpp  BenchmarkStrategy.h  ClassicModelFactory.cpp  ClassicModelFactory.h  ClassificationBenchmark.cpp  ClassificationBenchmark.h  Dataset.cpp  Dataset.h  DecisionTree.cpp  DecisionTree.h  DecisionTreeBuilder.cpp  DecisionTreeBuilder.h  HyperparameterSearch.h  IModel.h  LinRegModel.cpp  LinRegModel.h  LinearRegressionBuilder.cpp  LinearRegressionBuilder.h  LogRegModel.cpp  LogRegModel.h  LogisticRegressionBuilder.cpp  LogisticRegressionBuilder.h  ProjectTemplate.pro  RandomForest.cpp  RandomForest.h  RandomForestBuilder.cpp  RandomForestBuilder.h  RegressionBenchmark.cpp  RegressionBenchmark.h  XGBoostBuilder.cpp  XGBoostBuilder.h  XGBoostModel.cpp  XGBoostModel.h  main.cpp
code/app/: DemoRunner.cpp  DemoRunner.h
code/ui/: MainWindow.cpp  MainWindow.h
data-preprocessing/: README.md
data-preprocessing/data-files/classification/iris_dataset/: iris_X_test_processed.csv  iris_X_train_processed.csv  iris_y_test.csv  iris_y_train.csv
data-preprocessing/data-files/classification/titanic_dataset/: titanic_X_test_processed.csv  titanic_X_train_processed.csv  titanic_y_train.csv
data-preprocessing/data-files/regression/housing_data/: housing_X_test_processed.csv  housing_X_train_processed.csv  housing_y_test.csv  housing_y_train.csv
data-preprocessing/preprocessing-code/: README.md  housing.ipynb  iris.ipynb  titanic.ipynb
tests/: CMakeLists.txt  MockModel.h  TestBuilders.cpp  TestClassicModelFactory.cpp  TestDecisionTree.cpp  TestLinRegModel.cpp  TestLogisticRegression.cpp  TestRandomForest.cpp  TestRegressionBenchmark.cpp  TestXGBoostModel.cpp
